football enter contest page

--- a/markup/_layouts/_content/football_enter_contests_content.jade
+++ b/markup/_layouts/_content/football_enter_contests_content.jade
@@ -34,66 +34,53 @@ section.nl-section.nl-players.nl-enter-contests
 				div.nl-team-button
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
 					button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
-				div.nl-team-field
+				div.nl-team-field.football
 					div.striker-line
 					div.midfielder-line
 					div.defender-line
-					div.player-main-block
-						div.nl-player-block.nl-G-position(data-position="G")
-							img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
+					div.player-main-block.football
+						div.nl-player-block.nl-FLEX-position(data-position="FLEX")
+							img(src="assets/img/football/img-FLEX.png" alt="FLEX")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-DL-position(data-position="DL")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-K-position(data-position="K")
+							img(src="assets/img/football/img-K.png" alt="K")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-DR-position(data-position="DR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-LRB-position(data-position="LRB")
+							img(src="assets/img/football/img-LRB.png" alt="LRB")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-DAL-position(data-position="DAL")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-RRB-position(data-position="RRB")
+							img(src="assets/img/football/img-RRB.png" alt="RRB")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-DAR-position(data-position="DAR")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-QB-position(data-position="QB")
+							img(src="assets/img/football/img-QB.png" alt="QB")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-CM-position(data-position="CM")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-LWR-position(data-position="LWR")
+							img(src="assets/img/football/img-LWR.png" alt="LWR")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-RWM-position(data-position="RWM")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-RWR-position(data-position="RWR")
+							img(src="assets/img/football/img-RWR.png" alt="RWR")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-LWM-position(data-position="LWM")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
+						div.nl-player-block.nl-TE-position(data-position="TE")
+							img(src="assets/img/football/img-TE.png" alt="TE")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-RS-position(data-position="RS")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-LS-position(data-position="LS")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-ST-position(data-position="ST")
-							img(src="assets/img/img-players.png" alt="goalkeeper")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
+						div.nl-player-block.nl-team-logo-position
+							img(src="assets/img/football/team-logo.png" alt="logo")
 
 				div.nl-team-list.nl-my-teams.hide
 					.nl-card-wrapper
@@ -101,6 +88,8 @@ section.nl-section.nl-players.nl-enter-contests
 							.col-12
 								div.nl-team-card.table-data-field
 									h3 team NLC2
+									<img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+
 						.row
 							.col-12
 								table.table.table-striped.nl-team-list-table
@@ -116,70 +105,51 @@ section.nl-section.nl-players.nl-enter-contests
 										tr
 
 											td Player name
-											td.pos G
+											td.pos FLEX
 											td 30
 											td $0
 										tr
 
 											td Player name
-											td.pos DL
+											td.pos K
 											td 30
 											td $0
 										tr
 
 											td Player name
-											td.pos DR
+											td.pos LRB
 											td 30
 											td $0
 										tr
 
 											td Player name
-											td.pos DAL
+											td.pos RRB
 											td 30
 											td $0
 										tr
 
 											td Player name
-											td.pos DAR
+											td.pos QB
 											td 30
 											td $0
 										tr
 
 											td Player name
-											td.pos CM
+											td.pos LWR
 											td 30
 											td $0
 										tr
 
 											td Player name
-											td.pos RWM
+											td.pos RWR
 											td 30
 											td $0
 										tr
 
 											td Player name
-											td.pos LWM
+											td.pos TE
 											td 30
 											td $0
-										tr
-
-											td Player name
-											td.pos RS
-											td 30
-											td $0
-										tr
-
-											td Player name
-											td.pos LS
-											td 30
-											td $0
-										tr
-
-											td Player name
-											td.pos ST
-											td 30
-											td $0
-
 			div.col-lg-4.offset-lg-1
 				div.nl-contest-info-title
 					h1.heading-search__header Contest information
