Adjust tables for football contests

--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -1,5 +1,5 @@
 section.nl-section.nl-players.nl-create-team
-    div.container
+    div.container.container-wider
         div.row
             div.col-md-12
                 h1 CREATE TEAM
@@ -504,11 +504,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td FLEX
+                                                td G
                                                 td RMA
                                                 td ACT
                                                 td FCB
-                                                td 09/17/17
+                                                td 09/17/17 11:00 PM
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
@@ -516,11 +516,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td K
+                                                td DL
                                                 td RMA
                                                 td ACT
                                                 td FCB
-                                                td 09/17/17
+                                                td 09/17/17 11:00 PM
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
@@ -528,11 +528,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td LRB
+                                                td DR
                                                 td RMA
                                                 td ACT
                                                 td FCB
-                                                td 09/17/17
+                                                td 09/17/17 11:00 PM
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
@@ -540,11 +540,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td RRB
+                                                td DAL
                                                 td RMA
                                                 td ACT
                                                 td FCB
-                                                td 09/17/17
+                                                td 09/17/17 11:00 PM
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
@@ -552,11 +552,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td QB
+                                                td DAR
                                                 td RMA
                                                 td ACT
                                                 td FCB
-                                                td 09/17/17
+                                                td 09/17/17 11:00 PM
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
@@ -564,11 +564,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td LWR
+                                                td CM
                                                 td RMA
                                                 td ACT
                                                 td FCB
-                                                td 09/17/17
+                                                td 09/17/17 11:00 PM
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
@@ -576,11 +576,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td RWR
+                                                td RWM
                                                 td RMA
                                                 td ACT
                                                 td FCB
-                                                td 09/17/17
+                                                td 09/17/17 11:00 PM
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
@@ -588,12 +588,49 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td TE
+                                                td LWM
                                                 td RMA
                                                 td ACT
                                                 td FCB
-                                                td 09/17/17
+                                                td 09/17/17 11:00 PM
                                                 td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td RS
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17 11:00 PM
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td LS
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17 11:00 PM
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td ST
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17 11:00 PM
+                                                td <a href="#"><span class="info">i</span></a>
+
 
 
 
