--- a/markup/_layouts/_content/football_enter_contests_content.jade
+++ b/markup/_layouts/_content/football_enter_contests_content.jade
@@ -1,7 +1,7 @@
 section.nl-section.nl-players.nl-enter-contests
-	div.container
+	div.container.container-narrow
 		div.row
-			div.col-lg-5.offset-lg-1
+			div.col-lg-6
 				div.heading-search
 					h1.heading-search__header Teams
 					div.heading-search__search
@@ -150,7 +150,7 @@ section.nl-section.nl-players.nl-enter-contests
 											td.pos TE
 											td 30
 											td $0
-			div.col-lg-4.offset-lg-1
+			div.col-lg-6
 				div.nl-contest-info-title
 					h1.heading-search__header Contest information
 				div.nl-contest-info-table
