--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -12,16 +12,16 @@ section.nl-section.nl-players.nl-create-team
                             ul.country-selector.nav.nav-tabs(role="tablist")
                                 li.nav-item
                                     a.country-selector__link(data-toggle="tab" href="#usa" role="tab")
-                                        img.haat(src="assets/img/flag/USA.png" alt="USA")
+                                        img(src="assets/img/flag/USA.png" alt="USA")
                                 li.nav-item
                                     a.country-selector__link(data-toggle="tab" href="#spain" role="tab")
-                                        img.haat(src="assets/img/flag/Spain.png" alt="Spain")
+                                        img(src="assets/img/flag/Spain.png" alt="Spain")
                                 li.nav-item
                                     a.country-selector__link(data-toggle="tab" href="#germany" role="tab")
-                                        img.haat(src="assets/img/flag/Germany.png" alt="Germany")
+                                        img(src="assets/img/flag/Germany.png" alt="Germany")
                                 li.nav-item
                                     a.country-selector__link(data-toggle="tab" href="#france" role="tab")
-                                        img.haat(src="assets/img/flag/France.png" alt="France")
+                                        img(src="assets/img/flag/France.png" alt="France")
 
                 div.tab-content
                     div.tab-pane.fade.show(id="usa" role="tabpanel")
