--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -187,7 +187,7 @@
   }
 
   .table td:not(:first-child),.table th{
-    text-align: left;
+    text-align: center;
   }
 
   .table th{
@@ -197,6 +197,11 @@
 
   .table th, .table td{
     padding: calculateRem(8px);
+
+    &:nth-child(2) {
+      width: 24%;
+      text-align: left;
+    }
   }
 }
 
